Add google fonts, remove default margins, padding and borders, add basic page structure

--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="A calculator for electric vechicle range calculator, and maps for nearest charging points">
+    <meta name="keywords"
+        content="electric vechicle range calculator, electric vechicle journey calculator, nearest charging points">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Electric Vechicle Range Calculator</title>
 </head>
+
 <body>
-    
+    <header>
+        <a href="index.html">
+            <h1>EV Range Calculator</h1>
+        </a>
+    </header>
+
+    <div>
+        <h2>step 1 | Click to select your vehicle</h2>
+    </div>
+
+    <div>
+        <div>
+            <h3>Car 1</h3>
+        </div>
+        <div>
+            <h3>Car 2</h3>
+        </div>
+        <div>
+            <h3>Car 3</h3>
+        </div>
+    </div>
+
     <script src="assets/js/script.js"></script>
 </body>
+
 </html>
