--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="A calculator for electric vechicle range calculator, and maps for nearest charging points">
+        content="A calculator for electric vechicle range, and maps for nearest charging points">
     <meta name="keywords"
         content="electric vechicle range calculator, electric vechicle journey calculator, nearest charging points">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Electric Vechicle Range Calculator</title>
+    <title>Electric Vehicle Range Calculator</title>
 </head>
 
 <body>
     <header>
         <a href="index.html">
-            <h1>EV Range Calculator</h1>
+            <h1 id="main-heading">EV Range Calculator</h1>
         </a>
     </header>
 
