Add three circular car images

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1 id="main-heading">EV Range Calculator</h1>
+            <h1>EV Range Calculator</h1>
         </a>
     </header>
 
@@ -24,16 +24,18 @@
         <h2>step 1 | Click to select your vehicle</h2>
     </div>
 
-    <div>
-        <div>
-            <h3>Car 1</h3>
+        <div class="circle-container">
+            <div id="circle-cover-bg1"></div>
         </div>
-        <div>
-            <h3>Car 2</h3>
+
+        <div class="circle-container">
+            <div id="circle-cover-bg2"></div>
         </div>
-        <div>
-            <h3>Car 3</h3>
+
+        <div class="circle-container">
+            <div id="circle-cover-bg3"></div>
         </div>
+
     </div>
 
     <script src="assets/js/script.js"></script>
