Add flexbox to contain circular cars images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
         <h2>step 1 | Click to select your vehicle</h2>
     </div>
 
+    <div id="cars-continer">
+
         <div class="circle-container">
             <div id="circle-cover-bg1"></div>
         </div>
