Add headings to three cards images

--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
 
         <div class="circle-container">
             <div id="circle-cover-bg1"></div>
+            <h3>Mini 2</h3>
         </div>
 
         <div class="circle-container">
             <div id="circle-cover-bg2"></div>
+            <h3>Sports 2</h3>
         </div>
 
         <div class="circle-container">
             <div id="circle-cover-bg3"></div>
+            <h3>Family 4</h3>
         </div>
 
     </div>
