--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description"
         content="A calculator for electric vechicle range, and maps for nearest charging points">
     <meta name="keywords"
-        content="electric vechicle range calculator, electric vechicle journey calculator, nearest charging points">
+        content="electric vechicle range calculator, electric vechicle journey calculator, Ireland, nearest charging points">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Electric Vehicle Range Calculator</title>
 </head>
@@ -26,17 +26,17 @@
 
     <div id="cars-continer">
 
-        <div class="circle-container">
+        <div class="circle-container" id="select-mini">
             <div id="circle-cover-bg1"></div>
             <h3>Mini 2</h3>
         </div>
 
-        <div class="circle-container">
+        <div class="circle-container" id="select-sports">
             <div id="circle-cover-bg2"></div>
             <h3>Sports 2</h3>
         </div>
 
-        <div class="circle-container">
+        <div class="circle-container" id="select-family">
             <div id="circle-cover-bg3"></div>
             <h3>Family 4</h3>
         </div>
