--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <h2>step 1 | Click to select your vehicle</h2>
     </div>
 
+    <!-- Three cars images flexbox -->
     <div id="cars-continer">
 
         <div class="circle-container" id="select-mini">
@@ -43,7 +44,7 @@
 
     </div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/js/homepage_script.js"></script>
 </body>
 
 </html>
