--- a/results.html
+++ b/results.html
@@ -25,12 +25,22 @@
 
     <div class="circle-container" id="select-mini">
         <div id="circle-cover-bg1"></div>
-        <h3>Car heading</h3>
+        <h3>Mini 2</h3>
     </div>
     <br>
     <br>
 
+    <div>
+        <h3 id="your_selection">Displays your selection here</h3>
+    </div>
 
+    <div>
+        <h3 id="your_range">Displays your range and if you need to recharge here</h3>
+    </div>
+
+    <div>
+        <h3 id="recharge_map">If you need to recharge it displays a Google charging stations map here</h3>
+    </div>
 
     <script src="assets/js/script.js"></script>
 </body>
