--- a/results.html
+++ b/results.html
@@ -30,8 +30,7 @@
     <br>
     <br>
 
-    <div>
-        <h3 id="your_selection">Displays your selection here</h3>
+    <div id="your_selection">
     </div>
 
     <div>
