Add to javascript to take in variables and show results on the modal

--- a/form_mini.html
+++ b/form_mini.html
@@ -14,11 +14,13 @@
 
 <body>
     <header>
+        <!-- Main heading -->
         <a href="index.html">
             <h1>EV Range Calculator</h1>
         </a>
     </header>
 
+    <!-- Main Sub heading -->
     <div>
         <h2>step 2 | Select your journey options</h2>
     </div>
@@ -76,7 +78,7 @@
         </form>
     </section>
 
-    <!-- The Modal -->
+    <!-- The Modal for displaying Car Range results-->
     <div id="myModal" class="modal">
 
         <!-- Modal content -->
