Add styling to form section

--- a/form_mini.html
+++ b/form_mini.html
@@ -26,7 +26,7 @@
     </div>
 
     <!-- Mini car image -->
-    <div class="circle-container" id="select-mini">
+    <div class="circle-container">
         <div id="circle-cover-bg1"></div>
         <h3>Mini 2</h3>
     </div>
@@ -73,7 +73,7 @@
             <br>
 
             <!-- Calculate range and Open The Modal -->
-            <input type="submit" id="myBtn" value="Calculate">
+            <input type="submit" id="calculate_button" value="Calculate">
 
         </form>
     </section>
