Add javascript to calculate journey distance

--- a/form_mini.html
+++ b/form_mini.html
@@ -84,7 +84,8 @@
         <!-- Modal content -->
         <div class="modal-content">
             <span class="close">&times;</span>
-            <div id="display_results"></div>
+            <div class="modaltext" id="display_results"></div>
+            <div class="modaltext" id="display_journeydistance"></div>
         </div>
 
     </div>
