Add javascript to calculate current range vs journey, and show a message if a recharge is needed or not

--- a/form_mini.html
+++ b/form_mini.html
@@ -86,6 +86,7 @@
             <span class="close">&times;</span>
             <div class="modaltext" id="display_results"></div>
             <div class="modaltext" id="display_journeydistance"></div>
+            <div class="modaltext" id="display_rechargemessage"></div>
         </div>
 
     </div>
