Add google map with charging stations to modal

--- a/form_mini.html
+++ b/form_mini.html
@@ -87,6 +87,9 @@
             <div class="modaltext" id="display_results"></div>
             <div class="modaltext" id="display_journeydistance"></div>
             <div class="modaltext" id="display_rechargemessage"></div>
+            <div id="map">
+                <iframe id="map-iframe" src="https://maps.google.com/maps?q=limerick%20ev%20charging%20stations&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+            </div>
         </div>
 
     </div>
