--- a/form_mini.html
+++ b/form_mini.html
@@ -38,7 +38,7 @@
         <!-- https://formdump.codeinstitute.net/ -->
         <form action="#" method="POST" id="journey-form">
             <label for="currentcharge">Current Charge %</label>
-            <input type="number" min=0 max=100 id="currcharge" class="charge-input" value="currentcharge"
+            <input type="number" min=0 max=100 maxlength="3" onchange="checkRangeNum()" id="currcharge" class="charge-input" value="currentcharge"
                 name="current_charge" required>
 
             <br>
