Fix bug with currentcharge variable, remove name=currentcharge was not requried

--- a/form_mini.html
+++ b/form_mini.html
@@ -38,8 +38,8 @@
         <!-- https://formdump.codeinstitute.net/ -->
         <form action="#" method="POST" id="journey-form">
             <label for="currentcharge">Current Charge %</label>
-            <input type="number" min=0 max=100 maxlength="3" onchange="checkRangeNum()" id="currcharge" class="charge-input" value="currentcharge"
-                name="current_charge" required>
+            <input type="number" min=0 max=100 maxlength="3" placeholder="100" onchange="checkRangeNum()" id="currcharge" class="charge-input" 
+                name="currentcharge" required>
 
             <br>
 
