--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description"
-        content="A calculator for electric vechicle range, and maps for nearest charging points">
+    <meta name="description" content="A calculator for electric vechicle range, and maps for nearest charging points">
     <meta name="keywords"
         content="electric vechicle range calculator, electric vechicle journey calculator, Ireland, nearest charging points">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -44,7 +43,7 @@
 
     </div>
 
-    <script src="assets/js/homepage_script.js"></script>
+    <script src="assets/js/homepage-script.js"></script>
 </body>
 
 </html>
