--- a/formmini.html
+++ b/formmini.html
@@ -38,8 +38,8 @@
         <!-- https://formdump.codeinstitute.net/ -->
         <form action="#" method="POST" id="journey-form">
             <label for="currentcharge">Current Charge %</label>
-            <input type="number" min=0 max=100 maxlength="3" onchange="checkRangeNum()"
-                id="currcharge" class="charge-input" name="currentcharge" required>
+            <input type="number" min="0" max="100" maxlength="3" onchange="checkRangeNum()"
+                id="currcharge" class="charge-input" name="currentcharge" required />
 
             <br>
 
