Add map of charging points for each location

--- a/formmini.html
+++ b/formmini.html
@@ -88,7 +88,7 @@
             <div class="modaltext" id="display_rechargemessage"></div>
             <div id="map">
                 <iframe id="map-iframe"
-                    src="https://maps.google.com/maps?q=limerick%20ev%20charging%20stations&t=&z=13&ie=UTF8&iwloc=&output=embed"></iframe>
+                    src="https://bit.ly/3TlKoXA"></iframe>
             </div>
         </div>
     </div>
