--- a/formmini.html
+++ b/formmini.html
@@ -72,7 +72,7 @@
 
             <hr id="white_underline">
 
-            <!-- Calculate range and Open The Modal -->
+            <!-- Calculate range and open the Modal -->
             <input type="submit" id="calculate_button" value="Calculate">
 
         </form>
@@ -93,14 +93,14 @@
         </div>
     </div>
 
-    <!-- The Modal for displaying alert for entry out of range 0 to 100-->
+    <!-- The Modal for displaying alert for entry out of range 0 to 100
     <div id="rangeAlertModal" class="modal">
-        <!-- Modal content -->
-        <div class="modal-content">
+        Modal content -->
+        <!-- <div class="modal-content">
             <span class="close">&times;</span>
             <div class="modaltext" id="display_alert">The alert message will go here!</div>
         </div>
-    </div>
+    </div> -->
 
     <script src="assets/js/script.js"></script>
 </body>
