Add script to check number range for charge input

--- a/formmini.html
+++ b/formmini.html
@@ -38,8 +38,9 @@
         <!-- https://formdump.codeinstitute.net/ -->
         <form action="#" method="POST" id="journey-form">
             <label for="currentcharge">Current Charge %</label>
-            <input type="number" min="0" max="100" maxlength="3" onchange="checkRangeNum()"
-                id="currcharge" class="charge-input" name="currentcharge" required/>
+            <input type="number" min="0" max="100" maxlength="3" onchange="checkRangeNum()" id="currcharge"
+                class="charge-input" name="currentcharge" required />
+            <div id="alertmessage"></div>
 
             <hr id="white_underline">
 
@@ -87,20 +88,10 @@
             <div class="modaltext" id="display_journeydistance"></div>
             <div class="modaltext" id="display_rechargemessage"></div>
             <div id="map">
-                <iframe id="map-iframe"
-                    src="https://bit.ly/3TlKoXA"></iframe>
+                <iframe id="map-iframe" src="https://bit.ly/3TlKoXA"></iframe>
             </div>
         </div>
     </div>
-
-    <!-- The Modal for displaying alert for entry out of range 0 to 100
-    <div id="rangeAlertModal" class="modal">
-        Modal content -->
-        <!-- <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="modaltext" id="display_alert">The alert message will go here!</div>
-        </div>
-    </div> -->
 
     <script src="assets/js/script.js"></script>
 </body>
