Add Reset button to form and style

--- a/formmini.html
+++ b/formmini.html
@@ -37,10 +37,6 @@
     <section id="form-section">
         <!-- https://formdump.codeinstitute.net/ -->
         <form action="#" method="POST" id="journey-form">
-            
-            <!-- <label for="currentcharge">Current Charge %</label>
-            <input type="number" min="0" max="100" maxlength="3" onblur="checkRangeNum()" id="currcharge"
-                class="charge-input" name="currentcharge" required/> -->
 
             <label for="currentcharge">Current Charge %</label>
             <select name="currentcharge" id="currcharge">
@@ -89,6 +85,7 @@
 
             <!-- Calculate range and open the Modal -->
             <input type="submit" id="calculate_button" value="Calculate">
+            <input type="reset" id="reset_button" value="Reset">
 
         </form>
     </section>
