--- a/formmini.html
+++ b/formmini.html
@@ -90,6 +90,13 @@
         </form>
     </section>
 
+    <!-- Back button for main car selection page -->
+    <div>
+        <a href="index.html" id="backtomainlink">
+            <h3><i class="fa-solid fa-circle-arrow-left"></i>Back to Car Selection page</h3>
+        </a>
+    </div>
+
     <!-- The Modal for displaying Car Range results-->
     <div id="resultsModal" class="modal">
         <!-- Modal content -->
@@ -97,7 +104,6 @@
             <span class="close">&times;</span>
             <div class="modaltext" id="display_results"></div>
             <div class="modaltext" id="display_journeydistance"></div>
-            
             <div class="modaltext" id="display_rechargemessage"></div>
             <div id="map">
                 <iframe id="map-iframe" src="https://bit.ly/3TlKoXA"></iframe>
@@ -105,8 +111,10 @@
         </div>
     </div>
 
-
     <script src="assets/js/script.js"></script>
+
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/e8d6fac933.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
