--- a/formmini.html
+++ b/formmini.html
@@ -34,11 +34,11 @@
     <br>
 
     <!-- Journey options form -->
-    <section id="form-section">
+    <div id="form-section">
         <!-- https://formdump.codeinstitute.net/ -->
         <form action="#" method="POST" id="journey-form">
 
-            <label for="currentcharge">Current Charge %</label>
+            <label for="currcharge">Current Charge %</label>
             <select name="currentcharge" id="currcharge">
                 <option value="10%">10</option>
                 <option value="20%">20</option>
@@ -52,43 +52,43 @@
                 <option value="100%">100</option>
             </select>
 
-            <hr id="white_underline">
+            <hr class="white_underline">
 
-            <label for="passengers">Number of passengers</label>
-            <select id="num_passengers" value="passengers" name="numofpassengers">
+            <label for="num_passengers">Number of passengers</label>
+            <select id="num_passengers" name="numofpassengers">
                 <option value="1">1</option>
                 <option value="2">2</option>
             </select>
 
-            <hr id="white_underline">
+            <hr class="white_underline">
 
             <label for="aircon">Air Conditioning</label>
             <input type="radio" id="aircon" value="aircon" name="heating_aircon">
 
-            <hr id="white_underline">
+            <hr class="white_underline">
 
             <label for="heating">Heating</label>
             <input type="radio" id="heating" value="heating" name="heating_aircon">
 
-            <hr id="white_underline">
+            <hr class="white_underline">
 
-            <label for="from">Journey from: Dublin</label>
+            <label for="end_destination">Journey from: Dublin</label>
 
-            <label for="to">to</label>
-            <select id="end_destination" value="to" name="to_destination">
+            <label for="end_destination">to</label>
+            <select id="end_destination" name="to_destination">
                 <option value="1">Limerick</option>
                 <option value="2">Belfast</option>
                 <option value="3">Cork</option>
             </select>
 
-            <hr id="white_underline">
+            <hr class="white_underline">
 
             <!-- Calculate range and open the Modal -->
             <input type="submit" id="calculate_button" value="Calculate">
             <input type="reset" id="reset_button" value="Reset">
 
         </form>
-    </section>
+    </div>
 
     <!-- Back button for main car selection page -->
     <div>
