Add javascript to check the type of car to calculate range

--- a/formfamily.html
+++ b/formfamily.html
@@ -26,9 +26,9 @@
     </div>
 
     <!-- Family car image -->
-    <div class="circle-container" id="select-family">
+    <div class="circle-container">
         <div id="circle-cover-bg3"></div>
-        <h3>Family 4</h3>
+        <h3 id="cartype">Family 4</h3>
     </div>
     <br>
     <br>
