--- a/formmini.html
+++ b/formmini.html
@@ -28,7 +28,7 @@
     <!-- Mini car image -->
     <div class="circle-container">
         <div id="circle-cover-bg1"></div>
-        <h3>Mini 2</h3>
+        <h3 id="cartype">Mini 2</h3>
     </div>
     <br>
     <br>
