--- a/formsports.html
+++ b/formsports.html
@@ -26,9 +26,9 @@
     </div>
 
     <!-- Sports car image -->
-    <div class="circle-container" id="select-sports">
+    <div class="circle-container">
         <div id="circle-cover-bg2"></div>
-        <h3>Sports 2</h3>
+        <h3 id="cartype">Sports 2</h3>
     </div>
     <br>
     <br>
